# EntityDTOConverter

./: README.md  log.txt  pyproject.toml
src/entitydtoconverter/: __init__.py  base_dto.py  converters.py
tests/: test_dto_to_entity.py  test_entity_to_dto.py  test_update_entity.py
