[project]
name = "entitydtoconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thawancomt", email = "thawancomt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
